--- a/style.css
+++ b/style.css
@@ -30,9 +30,9 @@ header {
     z-index: 100;
     border-bottom: 1px solid black;
     position: fixed;
-    backdrop-filter: blur(100px);
-    -webkit-backdrop-filter: blur(100px);
-    background: rgba(255, 255, 255, 0.6);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+    background: rgba(255, 255, 255, 0.5);
 }
 
 .navigation a {
@@ -648,6 +648,61 @@ input[type="radio"]:checked + img {
 
 }
 
+.alert {
+    padding: 20px;
+    background-color: white;
+    border: 1px solid black;
+    width: 30%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    background: rgba(255, 255, 255, 0.6);
+    text-align: center;
+
+  }
+  
+  .closebtn {
+    margin-left: 15px;
+    color: black;
+    float: right;
+    font-size: 15px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+    text-align: center;
+  }
+
+  .alert-cart {
+    padding: 20px;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    background: rgba(255, 255, 255, 0.6);
+    border: 1px solid black;
+    width: 50%;
+    height:10%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+
+
+  }
+  
+  .closebtn-cart {
+    margin-left: 15px;
+    color: black;
+    float: right;
+    font-size: 15px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+
 /*------------------------------------------------------about-----------------------------------------------------*/
 
 .about-section {
@@ -655,6 +710,7 @@ input[type="radio"]:checked + img {
     margin: auto;
     text-align: center;
     border: 1px solid black;
+    align-items: center;
 }
 
 .body-about {
@@ -715,3 +771,5 @@ input[type="radio"]:checked + img {
 .nakupy{
     padding: 20px;
 }
+
+
